--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "moment": "^2.29.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
